# ivobos-bzlmod-monorepo

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  flake.nix  go.mod  pnpm-lock.yaml
.direnv/: flake-profile-1-link
.github/workflows/: main.yml
projects/calculator/: BUILD.bazel  calculator.py  calculator_test.py
projects/genrule_a/: BUILD.bazel
projects/genrule_b/: BUILD.bazel
projects/go_hello_world/: BUILD.bazel
projects/go_web/: BUILD.bazel  main.go
projects/hello_cc/: hello-world.cc
projects/my-python-app/: BUILD.bazel  main.py
projects/projectA/: BUILD.bazel
projects/projectB/: BUILD.bazel
projects/python_calculator/: BUILD.bazel  calculator_test.py
projects/python_web/: BUILD.bazel  main.py
