module(
    name = "ivobos-bazel-monorepo",
    version = "0.0.0",
    compatibility_level = 1,
)

# PYTHON PYTHON PYTHON PYTHON PYTHON PYTHON PYTHON PYTHON
bazel_dep(name = "rules_python", version = "0.32.2")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = True,
    python_version = "3.11",
)

# build third-party requirements
pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "third-party",
    python_version = "3.11",
    requirements_lock = "//third-party:requirements_lock.txt",
)
use_repo(pip, "third-party")

# GO GO GO GO GO GO GO GO GO GO GO GO GO GO GO GO GO GO GO GO
# see https://github.com/bazelbuild/rules_go/blob/master/docs/go/core/bzlmod.md
bazel_dep(name = "rules_go", version = "0.48.0")
bazel_dep(name = "gazelle", version = "0.36.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_gorilla_mux",
)

# NodeJS NodeJS NodeJS NodeJS NodeJS NodeJS
# following example in https://github.com/aspect-build/bazel-examples/blob/main/bzlmod/MODULE.bazel
bazel_dep(name = "aspect_rules_js", version = "1.32.1")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)
npm.npm_translate_lock(
    name = "npm",
    npmrc = "//:.npmrc",
    pnpm_lock = "//:pnpm-lock.yaml",
)
use_repo(npm, "npm")
